Closed
Bug 381284
Opened 18 years ago
Closed 18 years ago
[FIX]"ASSERTION: reading uninitialized value: 'mUnit != eStyleUnit_Null'"
Categories
(Core :: Layout: Tables, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla1.9alpha5
People
(Reporter: jruderman, Assigned: bzbarsky)
References
Details
(Keywords: assertion, testcase)
Attachments
(2 files)
|
132 bytes,
text/html
|
Details | |
|
1.20 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: reading uninitialized value: 'mUnit != eStyleUnit_Null', file ../../dist/include/layout/nsStyleCoord.h, line 88
This is hit during reftests (layout/reftests/box-properties/width-special-values-cell-auto.html).
I'm attaching a reduced testcase.
| Assignee | ||
Comment 1•18 years ago
|
||
#4 0x1855ba93 in nsStyleCoord::GetUnit (this=0xbfff95fc) at ../../dist/include/layout/nsStyleCoord.h:88
#5 0x1804b49e in GetWidthInfo (aRenderingContext=0x3f3cbfd4, aFrame=0x2448f58, aIsCell=1, aStylePos=0x2449b08) at ../../../mozilla/layout/tables/BasicTableLayoutStrategy.cpp:169
The relevant code is:
161 if (!aIsCell || maxWidth.GetIntValue() == NS_STYLE_WIDTH_FILL)
162 maxWidth.Reset();
...
169 unit = maxWidth.GetUnit();
That Reset() should set to None instead.
Blocks: 379741
| Assignee | ||
Comment 2•18 years ago
|
||
Attachment #265482 -
Flags: superreview?(dbaron)
Attachment #265482 -
Flags: review?(dbaron)
| Assignee | ||
Updated•18 years ago
|
Assignee: nobody → bzbarsky
Priority: -- → P2
Summary: "ASSERTION: reading uninitialized value: 'mUnit != eStyleUnit_Null'" → [FIX]"ASSERTION: reading uninitialized value: 'mUnit != eStyleUnit_Null'"
Target Milestone: --- → mozilla1.9alpha6
Comment on attachment 265482 [details] [diff] [review]
Like so
r+sr=dbaron
Attachment #265482 -
Flags: superreview?(dbaron)
Attachment #265482 -
Flags: superreview+
Attachment #265482 -
Flags: review?(dbaron)
Attachment #265482 -
Flags: review+
Updated•18 years ago
|
Flags: in-testsuite?
| Assignee | ||
Comment 4•18 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Target Milestone: mozilla1.9alpha6 → mozilla1.9alpha5
| Reporter | ||
Comment 5•18 years ago
|
||
The testcase here is just one line from (an old version of) the reftest mentioned in comment 0, so this is in-testsuite+.
Flags: in-testsuite? → in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•