No max-width means "none", not null unit.  Bug 381284, r+sr=dbaron